[package]
name = "inspector"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.1"  # For efficient locking
nix = "0.23.0"
num_cpus = "1.16.0"
rayon = "1.8.1"
tui = "0.16.0"
termion = "1.5.6"